--- a/ml.ipynb
+++ b/ml.ipynb
@@ -1983,6 +1983,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 112,
    "metadata": {},
    "outputs": [
@@ -2019,6 +2026,27 @@
     "#save the model to a file using pickle\n",
     "with open('model.pkl', 'wb') as model_file:\n",
     "     pickle.dump(rf,model_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([47, 838, 9, 1, 0, 2, 15, '2016', 250.0, 5.0, 29, 20, 870],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(X_test.iloc[0])"
    ]
   },
   {
